package seedu.duke.exceptions;

public class RecipeListEmptyError extends Exception{
    /**
     * Class constructor.
     */
    public RecipeListEmptyError() {}
}
